# AgenticAI

backend/: .env_local.txt  README_CONFLUENCE.md  chat.py  ingest.py  ingest_jira.py  main.py  pyproject.toml  testdb.py
backend/api/: app.py
backend/chroma_db/: chroma.sqlite3
backend/connectors/: confluence_loader.py  jira_loader.py  testc.py
backend/rag/: README.md  bm25_retriever.py  chunker.py  document_loader.py  embedding.py  generator.py  retreiver.py  vectorstore.py
frontend/src/: App.jsx
