[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
